[releng] add job to run tests
Change-Id: I8925072119bffa3bf61817d0c1ee47b9757687ab
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>