@@ -31,6 +31,9 @@ This file was generated by Eclipse EGF
     <condition property="sdk.url" value="${env.sdk.url}">
         <isset property="env.sdk.url" />
     </condition>
+    <condition property="vp-evolution.url" value="${env.vp-evolution.url}">
+        <isset property="env.vp-evolution.url" />
+    </condition>
     <condition property="rcptt.url" value="${env.rcptt.url}">
         <isset property="env.rcptt.url" />
     </condition>
@@ -107,6 +110,7 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dworkspace=${workspace}"/>
 	                <jvmarg value="-Dtimestamp=${timestamp}"/>
 	                <jvmarg value="-Dsdk.url=${sdk.url}"/>
+	                <jvmarg value="-Dvp-evolution.url=${vp-evolution.url}"/>
 	                <jvmarg value="-Drcptt.url=${rcptt.url}"/>
 	                <jvmarg value="-Dkitalpha_version=${kitalpha_version}"/>
 	                <jvmarg value="-Daut-path=${aut-path}"/>
@@ -288,6 +292,7 @@ This file was generated by Eclipse EGF
 		<echo message="Builtin $${workspace} : ${workspace}" />
 		<echo message="Builtin $${timestamp} : ${timestamp}" />
 		<echo message="Provided $${sdk.url} : ${sdk.url}" />
+		<echo message="Provided $${vp-evolution.url} : ${vp-evolution.url}" />
 		<echo message="Provided $${rcptt.url} : ${rcptt.url}" />
 		<echo message="Provided $${kitalpha_version} : ${kitalpha_version}" />
 		<echo message="Provided $${aut-path} : ${aut-path}" />
@@ -321,7 +326,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,import_tests_projects,Resource_Reuse,Metadata,run" />
+	<target name="all" depends="CleanStep_1,Install_RCPTT,download_TP,update_TP,import_tests_projects,Resource_Reuse,Metadata,run" />
 	<target name="import_tests_projects" depends="import_tests_projects_BuildStep_1" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
@@ -477,4 +482,34 @@ This file was generated by Eclipse EGF
 		</java>
 	</target>
 
+	<target name="update_TP" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${vp-evolution.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.sdk.feature.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
 </project>
